package proto;

import "proto/GlobalBoProto.proto";

option java_package = "com.funcy.g01.base.proto.bo.service";
option java_outer_classname = "RoleServiceRespProtoBuffer";

message GetRoleSocialBaseInfo {
	optional RoleInfoVoProto role = 1;
	optional RoleSocialBaseInfoProto socialInfo = 2;
	optional bool roleIsExist = 3;
}

message GetRoleSounds{
	repeated bytes sounds = 5;
}
